# EE6470-Implement-of-Many-Core-System-Final_Project

./: .gitignore  README.md  Report.md  多核心系統_final.pptx
golden/CIFAR-10_to_txt/: golden model.sln
golden/CIFAR-10_to_txt/golden model/: conv2_weights.txt  fc1_weights.txt  fc2_weights.txt  golden model.pyproj  golden_model.py
golden/CIFAR-10_to_txt/golden model/dataset/: conv1_quantized_result_1.txt  conv1_weights.txt  conv2_activation1.txt  conv2_activation_1.txt  conv2_quantized_result_1.txt  fc1_activation_1.txt  fc1_quantized_result_1.txt  fc2_activation_1.txt  fc3_activation_1.txt  fc3_bias_addition_1.txt  label_1.txt
golden/CIFAR-10_to_txt/golden model/parameters/: scale.json
golden/CIFAR-10_to_txt/golden model/parameters/activations/: input_1300.csv  input_3108.csv  output_1300.csv  output_3108.csv
golden/CIFAR-10_to_txt/golden model/parameters/weights/: conv1.weight.csv  conv2.weight.csv  fc1.weight.csv  fc2.weight.csv  fc3.bias.csv  fc3.weight.csv
golden/txt_to_header/: txt_to_header.sln
golden/txt_to_header/Debug/: txt_to_header.ilk
golden/txt_to_header/txt_to_header/: txt_to_header.cpp  txt_to_header.vcxproj  txt_to_header.vcxproj.filters
golden/txt_to_header/txt_to_header/Debug/: txt_to_header.exe.recipe  vc142.idb
golden/txt_to_header/txt_to_header/Debug/txt_to_header.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  txt_to_header.lastbuildstate
golden/txt_to_header/txt_to_header/generated_header/: conv1_activation_1.h  conv1_quantized_result_1.h  conv2_activation_1.h  conv2_max_pool_1.h  conv2_quantized_result_1.h  fc1_activation_1.h  fc1_input_1.h  fc1_quantized_result_1.h  fc2_activation_1.h  fc2_quantized_result_1.h  fc3_activation_1.h  fc3_bias_addition_1.h  fc3_quantized_result_1.h
golden/txt_to_header/txt_to_header/weights/: conv1_activation_1.txt  conv1_activation_quantized_1.txt  conv1_max_pool_1.txt  conv2_max_pool_1.txt  conv2_quantized_result_1.txt  data_1.txt  fc1_activation_1.txt  fc2_quantized_result_1.txt  fc3_activation_1.txt  fc3_bias.txt  fc3_bias_addition_1.txt  fc3_quantized_result_1.txt  fc3_weights.txt  input_quantized_1.txt
riscv-vp/sw/: README.md
riscv-vp/sw/2-cores/basic-dnn/: DMA.h  Makefile  main.cpp
riscv-vp/sw/2-cores/basic-dnn/parameters/: conv1_max_pool_1.h  conv1_weights.h  conv2_activation_1.h  fc1_activation_1.h  fc2_weights.h
riscv-vp/sw/2-cores/row-based-dnn/: Makefile  main.cpp
riscv-vp/sw/2-cores/row-based-dnn/parameters/: conv2_quantized_result_1.h  fc2_activation_1.h  fc3_bias.h
riscv-vp/sw/basic-dnn/: Makefile  main  main.cpp
riscv-vp/sw/basic-dnn/parameters/: conv2_max_pool_1.h  fc1_weights.h  fc3_bias_addition_1.h
riscv-vp/sw/row-based-dnn/: DMA.h  Makefile  main  main.cpp
riscv-vp/sw/row-based-dnn/parameters/: conv1_quantized_result_1.h  fc3_activation_1.h  scale.h
riscv-vp/sw/single-core/basic-dnn/: DMA.h  Makefile  main.cpp
riscv-vp/sw/single-core/basic-dnn/parameters/: fc2_quantized_result_1.h  fc3_weights.h  input_quantized_1.h
riscv-vp/sw/single-core/row-based-dnn/: DMA.h  Makefile  main.cpp
riscv-vp/sw/single-core/row-based-dnn/parameters/: fc1_input_1.h  fc1_quantized_result_1.h  fc3_quantized_result_1.h
riscv-vp/sw/systolic/: Makefile  main.cpp
riscv-vp/sw/systolic/parameters/: DNN_parameters.h  conv2_weights.h
riscv-vp/vp/src/platform/: CMakeLists.txt  CMakeLists_temp.txt
riscv-vp/vp/src/platform/basic-acc/: CMakeLists.txt  SobelFilter.h  SobelFilter_RS.h  filter_def.h  main.cpp  mram.h
riscv-vp/vp/src/platform/basic-hw6/: CMakeLists.txt  Filter.h  main.cpp
riscv-vp/vp/src/platform/tiny32-dnn/: CMakeLists.txt  FC_1.h  dma.h  main.cpp
riscv-vp/vp/src/platform/tiny32-dnn-2-cores/: CMakeLists.txt  Convolution_1.h  FC_1.h  FC_2.h  FC_3.h
riscv-vp/vp/src/platform/tiny32-dnn-single-core/: CMakeLists.txt  Convolution_1.h  Convolution_2.h  main.cpp
riscv-vp/vp/src/platform/tiny32-hw7/: CMakeLists.txt  Filter.h  filter_def.h  main.cpp
riscv-vp/vp/src/platform/tiny32-row-based-dnn/: CMakeLists.txt  Compile_def.h  Convolution_1.h  Convolution_2.h  FC_1.h  FC_2.h  FC_3.h  main.cpp
riscv-vp/vp/src/platform/tiny32-row-based-dnn-2-cores/: CMakeLists.txt  Convolution_1.h  FC_2.h  FC_3.h
riscv-vp/vp/src/platform/tiny32-row-based-dnn-single-core/: CMakeLists.txt  Convolution_2.h  (+2 more)
riscv-vp/vp/src/platform/tiny32-systolic-dnn/: CMakeLists.txt  FC_3.h
simulation_data/: latency.xlsx
(+5 files in other folders)
